--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "better-sqlite3": "^9.4.3",
     "express": "^4.18.3",
+    "ioredis": "^5.3.2",
     "socket.io": "^4.7.4"
   },
   "devDependencies": {
